--- a/d12dadb8043108a3635851400047f8f7824a29dd4ddb61e56c41deb6b04d9490/invoice.html
+++ b/d12dadb8043108a3635851400047f8f7824a29dd4ddb61e56c41deb6b04d9490/invoice.html
@@ -13,7 +13,7 @@
         <div class="container">
           <h1 class="title is-size-1">登録完了</h1>
           <p class="is-size-3">お客様の会員登録が正常に完了しました。</p>
-          <p class="is-size-3 has-text-danger">3日以内に<span class="has-text-weight-bold">98,000円</span>お支払い下さい。</p>
+          <p class="is-size-3 has-text-danger">今から24時間以内に<span class="has-text-weight-bold">98,000円</span>お支払い下さい。</p>
           <p class="is-size-3 has-text-danger">お支払いが確認できない場合は<span class="has-text-weight-bold">法的処置</span>をとらせていただきますのでご注意下さい。</p>
           <div class="notification is-danger" v-bind:style="{background: color}">
             <p class="is-size-2 has-text-centered">
@@ -28,10 +28,10 @@
         <h2 class="title">お問合せ</h2>
         <table class="table is-striped is-fullwidth">
           <tr>
-            <td>電話番号</td><td>0120-999-999</td>
+            <td>電話番号</td><td>0120-893-931</td>
           </tr>
           <tr>
-            <td>メールアドレス</td><td>info@example.com</td>
+            <td>メールアドレス</td><td>gokudo@yakuza.com</td>
           </tr>
         </table>
         <h2 class="title">お振込先</h2>
